src/test/ui/union/union-generic.stderr
error[E0277]: the trait bound `Rc<u32>: Copy` is not satisfied
  --> $DIR/union-generic.rs:8:13
   |
LL | union U<T: Copy> {
   | ---------------- required by `U`
...
LL |     let u = U { a: Rc::new(0u32) };
   |             ^ the trait `Copy` is not implemented for `Rc<u32>`

error[E0277]: the trait bound `Rc<u32>: Copy` is not satisfied
  --> $DIR/union-generic.rs:10:13
   |
LL | union U<T: Copy> {
   | ---------------- required by `U`
...
LL |     let u = U::<Rc<u32>> { a: Default::default() };
   |             ^^^^^^^^^^^^ the trait `Copy` is not implemented for `Rc<u32>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
